--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "apr144-dbscan",
-  "version": "1.1.1-051524",
+  "name": "@apr144/dbscan",
+  "version": "1.1.1",
   "main": "src/index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -15,6 +15,9 @@
   },
   "author": "Jan Schwalbe",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
     "chai": "^4.3.7",
     "dtslint": "^4.2.1",
